--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
     "package.json"
   ],
   "dependencies": {
-    "masonry": "git@github.com:dipson/masonry.git#master",
+    "masonry": "https://github.com/dipson/masonry.git#master",
     "angular": "~1.3.0",
     "jquery": "~2.1.0",
     "imagesloaded": "~3.1.0"
